@@ -1,0 +1,6 @@
+[nosetests]
+with-doctest=1
+
+[egg_info]
+tag_build = dev
+tag_svn_revision = true
